--- a/kpwebsite.css
+++ b/kpwebsite.css
@@ -146,7 +146,7 @@ span-font{
   height:415px;
   width:100%;
   padding:10px;
-  /*background-image:url(../kp_website_desktop/images/banner1-full.jpg);*/
+  background-image:url(../kp_website_desktop/images/banner1-full.jpg);
   object-fit:cover;
   background-repeat:no-repeat;
   background-position:center;
